@@ -11,6 +11,14 @@ influences from my experiences with the former kwm.
 
 In 0.11:
 --------
+patchlevel 9 (CT - 27May98):
+	- SnapToWindow and SnapToBorder FUNCTIONS replaced with snapIt. The
+	    user-visible configurability remains the same. The on-screen
+	    effect is nonetheless improved.
+	- replaced "shaded" option by "shadedHorizontal" and "shadedVertical".
+	   For the moment it seems vertical shading is much more rapid (of
+	   course, much less gradient steps to calculate in KPixmap).
+  
 patchlevel 8:
         - WindowResizeType=Opaque improved. No more flickering and a 
             bit faster. Still not perfect in combination with horizontal shading. 
